# lib/api-spec/openapi.yaml
@@ -274,6 +274,8 @@ components:
           type: ["string", "null"]
         category:
           type: ["string", "null"]
+        replitUrl:
+          type: ["string", "null"]
         createdAt:
           type: string
         updatedAt:
@@ -287,6 +289,7 @@ components:
         - bundleId
         - version
         - category
+        - replitUrl
         - createdAt
         - updatedAt
 
@@ -306,6 +309,8 @@ components:
         version:
           type: ["string", "null"]
         category:
+          type: ["string", "null"]
+        replitUrl:
           type: ["string", "null"]
       required:
         - name
@@ -328,6 +333,8 @@ components:
         version:
           type: ["string", "null"]
         category:
+          type: ["string", "null"]
+        replitUrl:
           type: ["string", "null"]
 
     Revision:
